[package]
name = "clipboard_sync"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clipboard-win = "4.4.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
FileDescription = "Send to iOS"
ProductName = "Send"